# sample_ap2

./: .env.example  .gitignore  README.md  pyproject.toml
ap2/: __init__.py  agent.py  cdp_signer.py  crypto.py  mandates.py  payment.py  validation.py  x402_payment.py
examples/: delegated_task.py  realtime_purchase.py  x402_purchase.py  x402_server.py
tests/: test_mandates.py
