[project]
name = "sample-ap2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cdp-sdk>=1.44.0",
    "cryptography>=48.0.0",
    "eth-account>=0.13.7",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
    "x402[evm,extensions,fastapi,mechanisms,requests]>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
